[package]
name = "hn_terminal"
version = "0.1.0"
authors = ["kenboo98 <tellambu@ualberta.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.9.1"
termion = "1.5"
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde_json = "1.0"
futures = "0.3.4"
tokio = "0.2.20"
ammonia = "3.1.0"
async-recursion = "0.3.1"